kubernetes/harbor/overlays/okd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    openshift.io/cluster-monitoring: "true"
