kubernetes/harbor/overlays/okd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: harbor
  namespace: harbor
  annotations:
    external-dns.alpha.kubernetes.io/hostname: quay.garrettholland.com
    external-dns.alpha.kubernetes.io/target: harbor.lab.garrettholland.com
  labels:
    external-dns: enabled
    type: lab
spec:
  host: harbor.lab.garrettholland.com
  to:
    kind: Service
    name: harbor
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
